@@ -1,5 +1,13 @@
 2007-03-02  Ray Strode  <rstrode@redhat.com>
 
+	* configure.in:
+	* gconf/gconf.c:
+	drop as much of the legacy popt stuff as we can,
+	while remaining compatible (bug 396071). Based on
+	patch from Chris Wilson <chris@chris-wilson.co.uk>
+
+2007-03-02  Ray Strode  <rstrode@redhat.com>
+
 	Patch from
 	Laszlo (Laca) Peter <laszlo.peter@sun.com>
 
